apps/architecture-portal/versioned_docs/version-1.0.48.0/operations/version-and-release.mdx
---
title: Version 与 Release
area: operations
status: implemented
owners: [release, core]
source_paths: [docs/governance/version-management.md, docs/governance/git-workflow.md, docs/plans/2026-08-09-lmdj-stage8-sample-editor.md, docs/release-evidence/release-intents.json, tools/release/policy.json, tools/release/audit.py, tools/release/target_validation.py, tools/release/ci_evidence.py, scripts/release.sh, .github/workflows/publish-release.yml, .github/workflows/deploy-web-runtime-host.yml, .github/workflows/deploy-creator-web.yml, docs/deploy/creator-web.md, docs/quality/2026-08-11-web-runtime-hardening-acceptance.md, scripts/version.py, docs/prd/decisions/2026-08-24-build-manifest-detached.md, .github/workflows/self-test-report.yml, scripts/ci/batch_runtime.py, scripts/ci/incremental_storage.json, tools/release/batch_evidence.py, tools/release/batch_reference.py]
---
import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 四条版本轴
Product Build 使用四段式；Core Module、Host 与 Provider 使用独立 SemVer；Contract 使用稳定 ID + Contract SemVer。

## Host changelogs

[Creator 独立日志](./creator-changelog.mdx) 与
[Web Runtime / Lab 独立日志](./runtime-changelog.mdx) 从各 Host manifest 和结构化
`CHANGELOG.md` 生成。没有日志时显示暂无记录，不补写历史版本。条目只说明 prepared，
不说明已经测试通过、部署、发布或晋级；认证回执展示仍待接入。

版本准备 PR 修改 Host 输入后，在 `apps/docs-site` 运行 `npm run changelogs`，
将静态页面一起提交，再按 Product 分配规则冻结快照。构建仅检查投影是否一致，
不会自动改写源码或历史快照。此展示功能不启动版本准备、部署或发布。

## 手动 canary 版本评估入口

`Canary Assessment`（`.github/workflows/canary-assessment.yml`）提供独立的手动
评估路径，不按日期运行，也不阻塞 PR 合入或主干自测。它只产生 Host 版本与
changelog 建议及失败报告，**不分配 Product Build、不创建版本 PR、不发布、不部署**。
自动的结果驱动调度、版本进度和后续交付仍是单独的实施与验收任务。

新评估默认禁用。启用 `CANARY_ASSESSMENT_EXECUTION_READY=true` 前，运营方必须验收
专用 disposable VM/microVM、受保护的 `canary-assessment` Environment，以及
`tools/canary/executor_policy.json` 中固定 SHA-256 的 root-owned 原生工具。
执行器使用 `lmdj-ai-isolated` 标签，不能同时承担普通 CI/pool 或部署任务；标签、
私有目录、单独用户或 readiness 变量本身都不是隔离证据。工作流不安装工具，
不读取机器上的登录态，只使用显式配置的 GLM/Kimi coding key 与 Grok coding auth。
工具缺失或校验失败不会运行 PATH 中的替代程序。GLM → Kimi → Grok 全部失败时保留
blocked 结果，由后续报告步骤提 Issue，不在 CI 内修复。

所有操作只能从 `main` 发起新的第一次运行。每次 dispatch 都必须提供完整 `storage`
JSON：顶层恰好是 `assessment`、`outbox`；两项各包含 `repository`、`issue_number`、
`issue_node_id`、`bot_node_id`、`workflow_id`、`epoch`。ID 必须从实际 GitHub API
读取；两项使用相同仓库、工作流及 Bot 身份，但 Issue number/node ID 不同。
epoch 分别以 `canary-assessment-inputs-`、`canary-assessment-outbox-` 开头。
不能复用现有 scheduler、report 或 review journal，也不会自动新建或初始化存储。

- `init-assessment` / `init-outbox`：一次只初始化一个已明确预留的独立 Issue，
  `request` 为 `{}`；Issue 必须没有评论，正文精确为
  `<!-- lmdj-ci-journal-uninitialized-v1 -->` 加一个换行。不是清空或重置命令。
- `claim`：`request` 为 `{"base_sha":"<完整 SHA>","target_sha":"<完整 SHA>"}`。
  检查完整 main 历史后，先持久领取并保留完整输入 artifact，再释放短写锁执行 AI。
  `base_sha` 是明确选择的版本评估起点，不会自动采用主干测试进度。单次输入超限会
  拒绝，不截断或假装全覆盖；后续协调器仍需实现大区间的完整覆盖方案。
- 原运行终止后，在**新 dispatch** 中使用 `settle`，`request` 为
  `{"input_digest":"<原控制器摘要中的完整 digest>"}`。它校验原 run/attempt/control、
  producer job、上传步骤和完整结果，再持久记录；不会重新调用模型。
- `report` 使用同一个 digest 和 storage，先 reconcile 原结果，再通过独立 durable
  outbox 提 Issue 或恢复已有回执。未知 POST 不能盲目重发；不自动修复、关闭 Issue。
  已持久结果不依赖 artifact 继续存活。原结果缺失、损坏或过期则报告待核对义务，
  不能重置领取、用新 control 重新 claim 来冒充恢复。

恢复与报告不受新任务 readiness 开关影响。原执行中的结果保持 pending；原终止运行
没有成功上传时保留领取并要求核对。有效 blocked 结果先成功上传，由独立可见性 job
标红，这不代表结果遗失。Artifact 保留 30 天，应及时 settle/report；本手动入口
尚不自动接收完成回调或排空报告积压。源码和本地夹具测试不代表上述远端前置条件已验收。

## Assembly Lock
锁文件记录确切组件版本与 source hash，门户同样从它生成身份，防止文档手填漂移。
当前 Product、Channel 与 revision 以上方 Build Identity 为准。此次 Assembly 注册 Slice 参考 Provider 及其二进制输入规范与输出 Contract；默认 policy 仍不授予 Slice 执行权限，Host 输入 owner 接线属于 K5。不可变快照随 Build 分配冻结，分配不构成发布证据。

历史 Product Build `1.0.45.0 · canary · g<short-sha>`，在 Build 44 之上装配 Stage 11 的 Sound Set 试听字节通路。Contract 侧不动：试听不持久化任何东西，也不跨新的进程边界，`lmdj.soundset.v1` 保持 `1.1.0`。Module 侧 Audio Runtime 升到 `3.1.0`（保留 audition Bank 池、audition 控制种类与哨兵身份，纯追加）、Application Facade 升到 `3.2.0`（交回已重采样 PCM 的类型化试听方法，纯追加）、Web Runtime Platform 升到 `4.1.0`（追加操作面）；Foundation `0.4.0`、Authoring Domain `3.0.0`、Project I/O `3.0.0`、Project Cooker `1.1.0` 与 Provider SDK `1.1.4` 不变。Host 侧 CLI、MCP 与 Native Host 升到 `3.2.0`，Formal Web Runtime Host 与 Creator Web 升到 `4.1.0`——其中只有 Creator Web 有源码改动，其余四个是依赖 pin 跟随，与 Build 44 同一先例。这些身份同时写入 `products/lmdj/assembly.json`，因此 Assembly source hash 与 Assembly Lock hash 一并改变，本 Build 的不可变门户快照按 Build-cut 规则随分配在同一 Pull Request 内冻结。当前 source 可以没有 active Product intent；candidate、快照、tag、Release、部署与 Channel promotion 仍是独立状态。
Product Build `1.0.44.0 · canary · g<short-sha>` 曾是 Stage 11 Sound Set 安装能力的 source candidate，装配在 Build 43 之上。Contract 侧新增 `lmdj.soundset.v1 · 1.1.0` 与 `lmdj.soundset-catalog.v1 · 1.0.0`，并把 `lmdj.project-bundle.v1` 由 `1.1.0` 升到 `1.2.0`——`project_contract` 枚举补齐 `lmdj.project.v4`，这是 backward-compatible addition，也是必需的：自 Build 43 起本 Build 写出的每一个 Project 都是 v4，枚举不补齐则它们全都无法打包为 Bundle。`lmdj.project.v4` 保持 `4.1.0`，active Contract 由八个增至十个。Module 侧 Foundation `0.4.0`、Authoring Domain `3.0.0`、Project I/O `3.0.0`、Application Facade `3.1.0`、Web Runtime Platform `4.0.0`；Project Cooker `1.1.0`、Audio Runtime `3.0.0` 与 Provider SDK `1.1.4` 不变。Host 侧 CLI/MCP/Native Test Host `3.1.0`，Formal Web Runtime Host 与 Creator Web `4.0.0`。`resource_limits` 由九项增至十三项，两个本地 Proof Provider、Provider policy、Bank 共享配额与两份分发清单的资产计数都不动。这些身份同时写入 `products/lmdj/assembly.json`，因此 Assembly source hash 与 Assembly Lock hash 一并改变，该 Build 的不可变门户快照也按 Build-cut 规则在同一 Pull Request 内冻结。
Product Build `1.0.42.0 · canary · g<short-sha>` 曾是 Stage 10 Perform 集成的 source candidate：它引入 `lmdj.project.v4 · 4.0.0`，把 Authoring Domain 与 Project I/O 升至 `2.0.0`、Project Cooker 升至 `1.1.0`，Audio Runtime、Application Facade、Web Runtime Platform 与五个 Host 升至 `3.0.0`，并为 `resource_limits` 新增 `perform_recording_frames` 与 `perform_recording_queue_batches`、为 Creator 分发新增唯一的 `perform_master_tap_worklet` 资产。
Product Build `1.0.41.0 · canary · g<short-sha>` 曾是双 Web Host 六资产 Release 与独立部署控制面的 source candidate。
Product Build `1.0.26.0 · canary · g<short-sha>` 曾是 G3 Host settings crash-recovery/identity source candidate。
Product Build `1.0.25.0 · canary · g<short-sha>` 曾是 G2 evidence-durability source candidate。
Product Build `1.0.24.0 · canary · g<short-sha>` 曾是 source candidate。那次候选来自 provider-sdk G1/G4 缺陷修复级联：Attempt reservation 泄漏回收与 temp sibling 进程级唯一性修复已经进入 active manifests 与 Assembly Lock；历史 `1.0.21.0` 的 MPD218 复验和 `1.0.22.0` / `1.0.23.0` 的旧候选证据都不自动升级为 `1.0.24.0` 的候选结论。版本值由 active manifests 与 Assembly Lock 派生。

## Release cut

Product Build 从 `main` 切出，不在分支上组装。功能、Host、Provider、deploy workflow 与发布脚本先各自经普通 PR 当前 head 评审合入 `main`；control-plane 按可评审性和真实依赖拆分，不再要求 Integration Queue。切版 PR 只携带分配材料：`version.json` Build 分配、必要时的 `assembly.json` 与 `assembly.lock.json`、该 Build 的 immutable Portal snapshot 与 release-evidence 文档，经评审后 squash 合入。squash 产生的精确 `main` SHA 就是该 Build 唯一合法的 release target；之后的 `main` 提交不进入该 Build。发布后的修复走 PATCH：从已发布 tag 拉短命 `fix/<task>`，分配下一 PATCH，同一修复经普通 PR 回 `main`；仓库不设 `release/*` 或 `hotfix/*` 长期分支。规则全文见 `docs/governance/git-workflow.md` §6。

## Channel promotion

晋级只改发布记录，不改 GitHub Release。ledger 里 Product intent 的 `channel` 固定为发布时的 Channel，发布后不可变并继续决定 `prerelease` 与 `latest`；晋级写入可选的 `promotions` 列表，每条记录目标 Channel、UTC 时间、证据路径、各 Host 部署 run 与其 `evidence.json` 的 SHA-256。当前 Channel 等于最后一条记录。晋级严格向前、一次一档、不超过 policy 的 `promotion.max_channel`（M1 为 `dev`）。`dev` 的门禁是可判定的：intent 已发布、full exact-main CI 成立、profile 的每个部署 Host 各有一次成功的 `workflow_dispatch` 部署 run 且其保留证据记录同一 tag、target revision、Product Build 并全部 `passed`。`beta` 另需人工验收文档。`stable` 被工具拒绝，因为 D8 禁止切换已发布 Release 的 `prerelease`；这是开放问题。入口是 `scripts/release.sh promote TAG CHANNEL --deployment-run HOST=RUN_ID ...`，只向工作区写一份证据文档和一条 ledger 记录，再作为 docs PR 经当前 head 评审 squash 合入。规则全文见 `docs/governance/version-management.md` §3.1。

## Product Build 权威与诊断

`products/lmdj/version.json` 是当前 Product Build 的唯一源码权威。CMake、Runtime identity、
Portal facts 与 current-repository tests 都从它派生；`assembly.json` 的 Product Build 仍是经过
review 的 exact Assembly 声明，release intent、build-specific current prose 与 immutable
snapshot 也继续保存各自的精确事实，不能由 mutable HEAD 自动重写。

版本、Assembly、compiled assembly、lock 或 generated Runtime identity 漂移时，最早可判定的
gate 会报告 authority、expected、found 与 consumer path；生成物 stale 还会给出稳定的
`scripts/version.py lock` 或 `tools/web-runtime/generate_runtime_identity.py` remedy。修复命令只
恢复派生物，不会自动修改 reviewed Assembly、release intent、snapshot 或分配新 Product Build。

以下表格记录历史 Build 45 的身份；当前各组件身份见对应 Module、Host 与 Contract 页面自动生成的 Build Identity。

| Identity | Build 45 版本 | 变化边界 |
| --- | --- | --- |
| Foundation | `0.4.0` | Artifact/JSON/Sequence 身份，新增 Sound Set 清单解析 |
| Authoring Domain | `3.0.0` | Project v4、Asset Lineage 的封闭 variant、`create_project` 直接产出 v4 |
| Project I/O | `3.0.0` | v4-only writer、Sequence journal/receipt/recovery、Set Store、Bundle 1.2 |
| Project Cooker | `1.1.0` | Project v4 确定性 Runtime Snapshot |
| Audio Runtime | `3.1.0` | Pattern origin、整数 BPM anchor 与 Bar boundary |
| Provider SDK | `1.1.4` | Provider/Attempt boundary 不变 |
| Application Facade | `3.2.0` | Host-neutral Sequence/Performance/Sound Set 操作集 |
| Web Runtime Platform | `4.1.0` | frame-stamped unified input、Sequence bridge、十三项 manifest 上限 |
| Core CLI | `3.2.0` | Project v4、Sequence 与 Sound Set Facade surface |
| Core MCP | `3.2.0` | 长生命周期 Sequence owner 与 CLI parity，含 Sound Set 工具 |
| Native Host | `3.2.0` | Audio-frame CaptureWriter、Sequence lifecycle 与 Sound Set 转发 |
| Web Runtime Host | `4.1.0` | Diagnostic Sequence/cross-window evidence，十三项上限分发清单 |
| Creator Web | `4.1.0` | Sequence Surface、Perform、Sound Set 目录与安装 surface |
| Project Contract | `lmdj.project.v4 · 4.1.0` | 唯一写入真相；v1/v2/v3 仅迁移读取 |
| Project Bundle | `lmdj.project-bundle.v1 · 1.2.0` | 打包 head checkpoint 的 Contract 级别，可命名 v4；1.0/1.1 容器兼容读取 |
| Sound Set | `lmdj.soundset.v1 · 1.1.0` | Set 清单，含可选 `demo` Artifact |
| Sound Set Catalog | `lmdj.soundset-catalog.v1 · 1.0.0` | Catalog 索引；不可达时降级而非致命 |

这些版本变化按公开边界独立分配；历史身份及快照保持只读。已分配身份、branch-local Proof 或 immutable snapshot 都不等于 merged-main Proof、团队测试、Release 或 Channel promotion。
## Git 与发布
Task commit、push、PR、squash merge、signed product tag、Release、部署和 Channel promotion 是不同授权与证据。

## 标准 Release 控制面

源码 Product Build 与匹配的 immutable snapshot 可以先完成分配，此时允许没有 release intent；
零 intent 不授予任何 release 权限。Release intent 是独立 reviewed authorization，必须等该 Task
经 protected `main` squash merge、精确 squash SHA 已存在后才能绑定；branch-only 或 pre-squash SHA
无效。当前 Product Build 只允许零或一个 intent，重复 intent 会被拒绝；一旦 intent 存在，原有的
exact-target、merged-main Proof、完整 CI 与 protected-main ancestry 门禁仍全部适用。

仓库已实现四段正常路径：`scripts/release.sh prepare TAG` 只准备并验证本地状态，
`scripts/release.sh push-tag TAG` 只 push/reconcile 一个 exact tag，
`scripts/release.sh create-draft TAG` 只创建或补全一个 Draft，最后由 dispatch-only
`publish-release.yml` 发布同一个已验证 Draft。每段是独立授权；每次 mutation 后停止并重新运行
`scripts/release.sh audit --remote --tag TAG`。Audit 从 policy、release intent ledger 与 live
Git/GitHub 重建真相；historical exception 只能由 audit 显式报告，不能满足新的 prospective gate。

当前 `complete-test-v2` 要求 Owner 在 reviewed intent 中恰好引用一种来源：旧
`self-test-v1` 的 `self_test_evidence`，或增量 full 批次的 `batch_test_evidence`。
两者都必须是 exact target 的完整 16-suite passed verdict，包括 TSan 与 Release stress。旧 14-lane
`full` scope 不能再授权 prospective 发布。自测不阻碍 PR merge；正式版本仍由人手动发布。
现成同 SHA 的完整通过结论（包括有效历史日测或 node 证据）可复用，不要求重复补测。

证据同时绑定稳定 workflow ID / path、canonical repository、control 与 target 各自的 main
历史、run / attempt、全部 required 结果、适用 policy 和摘要；动态展示名不是 authority。
`run.head_sha` 是可信 control，可与 candidate target 不同。闭合 `self_test_evidence`
reference 由已验证事实写入独立 reviewed intent，并纳入 release plan digest，不自动授予发布。
新的内部发布元数据 `release plan marker v2`（不是产品 Contract）永久保留完整 CI reference，fresh remote audit 逐项比对；
给旧 v1 发布记录补填 intent 字段不会使它获得新自测资格。

增量来源还独立认证原 origin/admission controller artifacts 的 durable-claim attestation
（不是重放最新 journal），以及 verdict/execution/needs 三文件与真实 API jobs；current、
frozen control、actual executor 的 policy 必须一致。focused/none、债务、未知来源、过期
或跨 SHA 拼接不能作为候选证据。完整 batch reference 与真实 `executor_event` 永久写入
内部发布元数据 `release plan marker v3`（不是产品 Contract）；不能从 request kind 推断 event，也不能用 v1/v2 marker
证明新增 batch 引用。旧 markers 与 intent 不迁移、不自动补填。

Verdict artifact 保留 30 天。缺失、过期、错误 SHA、失败、skip 或混合 attempt 一律不能
通过候选验证。恢复须另行授权在 ref `main` 上 dispatch `self-test-report.yml`，选择
`batch_operation=reconcile`，输入闭合
`batch_request={"id":"<new-stable-request-id>","kind":"candidate","target":"<exact-main-SHA>"}`，
`journal_config` 留空使用可信源码固定调度器，再独立更新 intent。
显式诊断改用 `kind=node`，同样强制完整 16-suite。两种请求共享重型预算，固定目标
不会被持续合入替换，也不推进自动 processed。重送同 ID 同目标恢复原请求；真正重测
需要新 ID。不使用 SHA 作为 ref，不 Re-run jobs（当前只允许 attempt 1）。
旧 `ci.yml` 手动／每日 producer 退役以新 producer + consumer 真实演练为前置条件，
不能以本地测试冒充；历史来源 reader 保留。
已 published 的新旧协议均保留只读历史，继续核验不可变 tag、签名、Release、asset 与
plan marker；artifact 到期不改写历史。完整字段与切换规则见版本治理。
新协议 published 审计读取 recorded attempt；后续 rerun 不会覆盖历史，但新候选仍检查 latest。
仅实际 `Disposition.PUBLISHED` 可使用增量历史 provenance 路径；仍须 tag、signer、Release、
assets 与 v3 marker 全部通过，不把 allocated/abandoned/superseded 当作已发布。
消费者支持不是一次真实全量通过证明。手动精确 full 能力保留在统一增量控制器入口，
每日产品测试和每日缺测告警则退役；轻量健康巡检不按日期生成产品请求。

签名发生在可信本地边界；GitHub workflow 只持有 public trust anchors。公开 publication 必须由
精确输入的 workflow dispatch 显式授权，并通过受保护的 `release` Environment。当前单人维护者
模式要求零 required reviewer、不启用 prevent-self-review，并且只允许 exact `main` branch
policy。Publish 以一次 PATCH 设置 Draft、
prerelease 与 make-latest policy，前后重新验证 exact tag、numeric Release ID、plan digest 和闭合
资产；这是并发漂移检测，不宣称 API 提供强条件更新。Runtime deployment 是另一个 manual-only
exact-tag dispatch，之后的 Channel promotion 仍需第三份授权与证据。仓库中已有 release/deploy
tooling 不表示当前 Product Build 已经 released、deployed 或 promoted。

## PATCH、Assembly 与证据链

PATCH may not change Product Assembly identity or `assembly.lock`. Any module/provider/Host/dependency identity change allocates a new BUILD. Historical `1.0.16.x` events remain historical facts and are not rewritten；它们用于解释为什么规则被收紧，不构成再次偏离的先例。New Product tags require merged-main Proof first，且该 Proof 必须绑定未来 tag target 的精确 `main` revision、Product Build 与 lock hash。

权威链必须逐环核验并分别记录：Product Build -> signed tag -> tag revision -> merged PR -> source revision -> snapshot provenance/witness -> merged-main Proof revision -> evidence-only documentation revision。branch-local Proof、快照、CI、tag 或后写的证据文档都不能替代链中其他一环。
## 不可变性
已发布 tag 不移动；交付测试或正式发布的文档快照按 Product Build 冻结，current 文档持续跟随 main。普通 PR Preview 不创建永久快照。
schema-2 快照冻结 41 页源码、sidebar、十张图的 20 个 HTML/SVG 资产、源提交与 source projection；后续 current 或 diagram 变化不能改写已冻结版本。生成前允许的脏路径仅限该 Product Build 的精确生成边界，提交后还必须验证 introducing commit、时间顺序以及 direct-parent 或获准的 squash-equivalent projection。
### 已冻结快照的已知错误（勘误）

不可变性是双向的：快照保存的是冻结那一刻 current 页面所说的话，**包括当时已经为假的话**。
快照文件不得改写，因此已知错误记录在这里。

**`1.0.45.0`（canary）** 冻结时携带了三处当时已被合并代码推翻的陈述，来源是 Build 44 之后
未被同步的 current 页面：

- `contracts/soundset.mdx`：称 `soundset.audition` 只由三个原生 Host 服务、Web Host 的
  bridge 与 protocol 尚未注册它、Creator 还没有试听控制。三者在 `45756035`(#999) 与
  `917decee`(#1023) 之后均为假。
- `contracts/soundset.mdx`：称 [#900](https://github.com/endaye/lmdj/issues/900) 仍阻断
  Web Host 浏览与安装。该缺陷在 `f1293997` 修复，六腿浏览器 journey 自 `b5d8ca93`(#978)
  起无援转绿。
- `product/workflows.mdx`：同一条"只由三个原生 Host 服务、Creator 尚无试听控制"。

同一次冻结还保存了 Build 44 的版本号：`core/modules/*`、`hosts/*` 与
`operations/version-and-release.mdx` 当时仍写 Application Facade `3.1.0`、Audio Runtime
`3.0.0`、Web Runtime Platform `4.0.0` 与各 Host 的 Build 44 版本，而 `1.0.45.0` 的
Assembly 已分别 pin 到 `3.2.0`、`3.1.0`、`4.1.0` 与 `3.2.0`/`4.1.0`。

**为什么门禁没拦住。** 门禁按页固定内容，而它固定的是子集——`overview/index.mdx`、
`core/overview.mdx`、`product/capability-map.mdx` 与 `operations/testing-and-proof.mdx`
在 `content-inventory` 与 `repo-facts` 里有内容断言，上述页面没有。分配 Build 45 时只有
被固定的四页被同步，其余静默留在 Build 44 的叙述上，并被原样冻结。**门禁通过只证明机械
一致，不证明叙述为真**；这一条同时记在
`.agents/pitfalls/portal-gate-pins-a-subset-of-pages.md`。

current 页面已在同一变更中更正。`1.0.45.0` 快照按政策保持不变。

## 发布门禁
实现计划必须声明 Version impact；测试发布和 stable release 前都验证匹配的说明书快照，再分别运行该 Channel 所需的版本验证、测试、CI、产品验收与发布证据门禁。

候选 Product tag 必须由选定 Build 的 manifest 派生；只能在 squash merge、完整 CI、精确 tag-target 的 merged-main Proof 与单独授权之后创建 signed annotated tag。当前源码身份不宣称远端 CI、merge、tag、Release、部署、发布、public smoke 或 Channel promotion。匹配 Product Build 的不可变快照与 provenance 由 Portal 校验器判定；历史 Build 证据不自动升级。

## 双 Web Host Product Release

后续标准 profile `web-hosts` 为一个 Product Build/tag 创建一份精确六资产 Release：Creator 与
Runtime 各自贡献 ZIP、checksum 和 detached checksum signature。Release assets 是签名输入，
Creator 与 Runtime 仍是不同 Host/SemVer 和不同部署状态。Creator 生产目标是
`https://lmdj-creator.netlify.app/`，Runtime 是 `https://lmdj-runtime.netlify.app/`；两条
manual-only dispatch 的授权、Environment、Site credential、evidence 与 exact prior rollback
独立，publish-release.yml 不 fan-out 到部署。

历史 `1.0.40.0` tag、Release 与已记录部署保持不可变，不能补写 Creator 资产或重解释成
`web-hosts`。新 profile 只约束后续已分配并经 protected main 合并的 Product Build。Creator
Site 的外部 provisioning 尚须 live 证据；workflow 已存在不自动表示它已 deployed，Runtime
成功也不自动表示 Creator deployed，任一部署都不表示 promoted。

## Runtime Host 公共发布

Runtime Host 的两阶段发布工具和 workflow 定义已经存在：不持有 Netlify credential 的
preflight job 先从 canonical origin 验证 remote annotated signed Product tag、protected
`main` ancestry，以及 Release 精确三资产 ZIP、checksum 和受信 Release checksum key 的
detached armored signature，并完成资产下载与 staging；Product tag key 与 checksum key 的
固定指纹和用途相互独立，不能替代，signature 验证先于 checksum 解析。只有它通过后才安装
Node/Chromium，部署 job 在接触 Netlify 前对同一 Release 再验证一次。
Core Release 的资产集自 2026-08-24 起为四资产（#286）：除 ZIP、checksum 和受信
signature 外，`build-manifest.json` 不再打进归档，而是作为并列 detached 资产
`<archive-stem>.build-manifest.json` 发布（决策
`docs/prd/decisions/2026-08-24-build-manifest-detached.md`，#211）。归档自此只含
payload，同一源码与工具链下字节可复现；Manifest 字段不变，仍含构建时间与构建平台。
Web Runtime Host Release 保持上述精确三资产不变。
发布前会发现真实 prior 身份，并先在 prior immutable/production 上运行完整
HTTP/Chromium；draft smoke 通过后只发布同一个 ready Deploy ID。发布后任何失败、中断或
API error 都先 reconcile alias；若仍指向本次 Deploy 就恢复 exact prior，首次无 prior 则
以官方 reversible site disable 安全撤下。成功 evidence v2 与恢复 evidence v1 分别保存完整
HTTP JSON、browser、publish/restore response 和时间。它定义可审计的操作路径；实际发布
状态必须由与精确身份绑定的 evidence 独立报告。

该能力已进入仓库源码，但其存在不等于当前 Product Build（身份见上方 Build Identity） 或任何历史 Product Build 已获得 remote verified
tag、Release、Deploy ID、immutable URL、production alias、deployment evidence 或 Channel
promotion。历史 `1.0.15.2` 的 tag、Release 或部署证据不自动升级为当前候选证据；只有与
精确 Product/Host 身份绑定的实际 evidence record 才能让 Portal 报告公共部署。本地工具、
Proof、PR Preview 或 workflow 定义都不能替代它。运营前置条件、恢复和凭据轮换见仓库运行手册
`docs/deploy/web-runtime-host.md`；其验收真相记录见
`docs/quality/2026-08-08-web-runtime-public-deployment-acceptance.md`。

proof-only Python server 不属于生产面；Netlify 将静态服务经验证的 release `dist`。
`lmdj-canary` 属于 Creator 交付边界，不能作为 Diagnostic Runtime Host 的项目、别名或 URL。
